updating to deploy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uw-course-tracker",
   "homepage": "http://kevin-lau.github.io/UW-Course-Tracker",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
