--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "uw-course-tracker",
+    "name": "uw-course-tracker",
+    "homepage": "https://kevin-klau.github.io/UW-Course-Tracker/",
   "version": "0.1.0",
   "private": false,
   "dependencies": {
@@ -19,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
