Added find course feature

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "uw-course-tracker",
     "homepage": ".",
+    "proxy":"http://127.0.0.1:5000/",
     "version": "0.1.0",
     "private": false,
     "dependencies": {
