--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "fuse.js": "^6.6.2",
         "react": "^18.2.0",
         "react-card-flip": "^1.2.0",
+        "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "recharts": "^2.4.3",
