--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "version": "0.1.0",
     "private": false,
     "dependencies": {
+        "@emotion/react": "^11.10.8",
+        "@emotion/styled": "^11.10.8",
+        "@mui/material": "^5.12.3",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -15,6 +18,7 @@
         "react-circular-progressbar": "^2.1.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
+        "react-tooltip": "^5.11.1",
         "recharts": "^2.4.3",
         "use-immer": "^0.8.1",
         "web-vitals": "^2.1.4"
